  expense of a lower potential cache hit rate. The depend mode is only possible
  to use when the compiler option *-MD* or *-MMD* is used.

- Added support for GCC's `-ffile-prefix-map` option. The `-fmacro-prefix-map`
  option is now also skipped from the hash.

- Added support for multiple `-fsanitize-blacklist` arguments, thus preventing
  ccache from

- Fixed a problem due to Clang overwriting the output file when compiling an
  assembler file.

- Clarified the manual to explain the reasoning behind the “file_macro”
  sloppiness setting in a better way.

- ccache now handles several levels of nonexistent directories when rewriting
  absolute paths to relative.

- A new ``sloppiness'' setting *clang_index_store* makes ccache skip the Clang
  compiler option *-index-store-path* and its argument when computing the
  manifest hash. This is useful if you use Xcode, which uses an index store
  path derived from the local project path. Note that the index store won't be
  updated correctly on cache hits if you enable this option.


ccache 3.5.1
------------
Release date: 2019-01-02

Changes
~~~~~~~

- Added missing getopt_long.c source file to release archive.

- Fixed (harmless) compiler warnings when building ccache object files.

- CFLAGS is no longer passed to the linker when linking ccache.

- Improved development mode build flags.


ccache 3.5
----------
Release date: 2018-10-15

Changes
~~~~~~~

- Added a boolean `debug` (`CCACHE_DEBUG`) configuration option. When enabled,
  ccache will create per-object debug files that are helpful e.g. when
  debugging unexpected cache misses. See also the new ``Cache debugging''
  section in the manual.

- Renamed `CCACHE_CC` to `CCACHE_COMPILER` (keeping the former as a deprecated
  alias).

- Added a new command-line option `-k/--get-config` that prints the value of a
  config key.

- It is now possible to let ccache hash a precomputed checksum file instead of