@@ -132,7 +132,7 @@ TEST(conf_read_valid_config)
 		"read_only_direct = true\n"
 		"recache = true\n"
 		"run_second_cpp = false\n"
-		"sloppiness =     file_macro   ,time_macros,  include_file_mtime,include_file_ctime,file_stat_matches,file_stat_matches_ctime,pch_defines ,  no_system_headers,clang_index_store\n"
+		"sloppiness =     file_macro   ,time_macros,  include_file_mtime,include_file_ctime,file_stat_matches,file_stat_matches_ctime,pch_defines ,  no_system_headers,clang_index_store,locale\n"
 		"stats = false\n"
 		"temporary_dir = ${USER}_foo\n"
 		"umask = 777\n"
@@ -172,11 +172,18 @@ TEST(conf_read_valid_config)
 	CHECK(conf->read_only_direct);
 	CHECK(conf->recache);
 	CHECK(!conf->run_second_cpp);
-	CHECK_INT_EQ(SLOPPY_INCLUDE_FILE_MTIME|SLOPPY_INCLUDE_FILE_CTIME|
-	             SLOPPY_FILE_MACRO|SLOPPY_TIME_MACROS|
-	             SLOPPY_FILE_STAT_MATCHES|SLOPPY_FILE_STAT_MATCHES_CTIME|
-	             SLOPPY_NO_SYSTEM_HEADERS|SLOPPY_PCH_DEFINES|SLOPPY_CLANG_INDEX_STORE,
-	             conf->sloppiness);
+	CHECK_INT_EQ(
+		SLOPPY_INCLUDE_FILE_MTIME
+		|SLOPPY_INCLUDE_FILE_CTIME
+		|SLOPPY_FILE_MACRO
+		|SLOPPY_TIME_MACROS
+		|SLOPPY_FILE_STAT_MATCHES
+		|SLOPPY_FILE_STAT_MATCHES_CTIME
+		|SLOPPY_NO_SYSTEM_HEADERS
+		|SLOPPY_PCH_DEFINES
+		|SLOPPY_CLANG_INDEX_STORE
+		|SLOPPY_LOCALE,
+		conf->sloppiness);
 	CHECK(!conf->stats);
 	CHECK_STR_EQ_FREE1(format("%s_foo", user), conf->temporary_dir);
 	CHECK_INT_EQ(0777, conf->umask);
@@ -463,10 +470,16 @@ TEST(conf_print_items)
 		true,
 		true,
 		.run_second_cpp = false,
-		SLOPPY_FILE_MACRO|SLOPPY_INCLUDE_FILE_MTIME|
-		SLOPPY_INCLUDE_FILE_CTIME|SLOPPY_TIME_MACROS|
-		SLOPPY_FILE_STAT_MATCHES|SLOPPY_FILE_STAT_MATCHES_CTIME|
-		SLOPPY_PCH_DEFINES|SLOPPY_NO_SYSTEM_HEADERS|SLOPPY_CLANG_INDEX_STORE,
+		SLOPPY_FILE_MACRO
+		|SLOPPY_INCLUDE_FILE_MTIME
+		|SLOPPY_INCLUDE_FILE_CTIME
+		|SLOPPY_TIME_MACROS
+		|SLOPPY_FILE_STAT_MATCHES
+		|SLOPPY_FILE_STAT_MATCHES_CTIME
+		|SLOPPY_PCH_DEFINES
+		|SLOPPY_NO_SYSTEM_HEADERS
+		|SLOPPY_CLANG_INDEX_STORE
+		|SLOPPY_LOCALE,
 		false,
 		"td",
 		022,
@@ -518,7 +531,7 @@ TEST(conf_print_items)
 	CHECK_STR_EQ("run_second_cpp = false", received_conf_items[n++].descr);
 	CHECK_STR_EQ("sloppiness = file_macro, include_file_mtime,"
 	             " include_file_ctime, time_macros, pch_defines,"
-	             " file_stat_matches, file_stat_matches_ctime, no_system_headers, clang_index_store",
+	             " file_stat_matches, file_stat_matches_ctime, no_system_headers, clang_index_store, locale",
 	             received_conf_items[n++].descr);
 	CHECK_STR_EQ("stats = false", received_conf_items[n++].descr);
 	CHECK_STR_EQ("temporary_dir = td", received_conf_items[n++].descr);
